# Socratic-workflow

./: .gitignore  ARCHITECTURE.md  LICENSE  MANIFEST.in  PRODUCTION.md  README.md  SPONSORS.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml  quality.yml  tests.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  FAQ_BY_SCENARIO.md  GUIDES_BY_ROLE.md  INTEGRATION_GUIDE.md  TROUBLESHOOTING.md  WORKFLOW_OPTIMIZATION.md
examples/: 01_basic_workflow.py  02_cost_tracking.py  03_parallel_execution.py  04_error_recovery.py
src/socratic_workflow/: __init__.py  artifact_saver.py  distributed_execution.py  workflow.py  workflow_executor.py  workflow_templates.py
src/socratic_workflow/analytics/: __init__.py  metrics.py
src/socratic_workflow/cost/: __init__.py  tracker.py
src/socratic_workflow/execution/: __init__.py  executor.py  retry.py  scheduler.py
src/socratic_workflow/integrations/langchain/: __init__.py  tool.py
src/socratic_workflow/integrations/openclaw/: __init__.py  skill.py
src/socratic_workflow/optimization/: __init__.py  cost_calculator.py  optimizer.py  path_finder.py  risk_calculator.py
src/socratic_workflow/workflow/: __init__.py  checkpoint.py  definition.py  engine.py  parallel_executor.py  state.py  task.py
tests/: test_module_imports.py
tests/integration/: test_langchain.py  test_openclaw.py
tests/unit/: test_cost_tracker.py  test_engine.py  test_executor.py  test_metrics.py  test_retry.py  test_scheduler.py  test_state.py  test_task.py  test_workflow.py
