[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socratic-workflow"
version = "0.1.0"
description = "Production-grade workflow orchestration system with LLM cost tracking, performance analytics, and dependency management."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Socratic Workflow Contributors"}
]
keywords = [
    "workflow",
    "orchestration",
    "ai",
    "cost-tracking",
    "analytics",
    "langchain",
    "openclaw",
    "production",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
nexus = ["socrates-nexus>=0.3.0"]
agents = ["socratic-agents>=0.1.2"]
openclaw = []
langchain = ["langchain>=0.1.0"]

all = [
    "socrates-nexus>=0.3.0",
    "socratic-agents>=0.1.2",
    "langchain>=0.1.0",
]

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Nireus79/Socratic-workflow"
Repository = "https://github.com/Nireus79/Socratic-workflow"
Documentation = "https://github.com/Nireus79/Socratic-workflow#readme"
Issues = "https://github.com/Nireus79/Socratic-workflow/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "benchmark: Performance benchmark tests",
]
addopts = "-v --strict-markers"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
